# crawler_project

./: .gitignore  1_generate_seed_urls.py  2_validate_seed_dataset.py  3_crawl_cleaned_html.py  3_data_schema.txt  4_data_schema.txt  4_llm_filter_relevance.py  5_data_schema.txt  5_html_to_markdown.py  6_extract_metadata.py  7_prepare_qdrant_dataset.py  8_upload_to_qdrant.py  README.md  docker-compose.yml  extract_metadata_6.py  html_to_markdown_5.py  minio_client.py  my_export.py  my_export_tests.py  prefect.yaml  prepare_qdrant_dataset_7.py  pypline.py  pyproject.toml  upload_to_qdrant_8.py
agents/incident_agent/: agent.py  flask_app.py  prompts.py  run_agent.py  schemas.py  tools.py
data/: crawled.json  seed.json  validated.json
diagrams/: agent_logic.txt  dataset.txt  hyde.txt  main.txt
legacy/: report.html
legacy/qdrant_local_data/: meta.json
mts/: get_models.py  mts_chat.py
orchestration/: prefect_flows(checked).py  prefect_flows.py  prefect_pipeline.py
parsed_danluu/: danluu_postmortems.html  danluu_postmortems.jsonl  danluu_postmortems_qdrant_ready.jsonl
parsed_jimmyl02/: jimmyl02_postmortems.html  jimmyl02_postmortems.jsonl
pipeline/: flow.py
pipeline/tasks/: __init__.py  crawl.py  generate_seed.py  validate.py
prompts/: old_website_crawl_prompt.txt  website_crawl_prompt.txt
proof_of_concept/: geography_assistant.py  mathagent.py  mathagent_openai.py  mathagent_result.txt  my_crawler_help.py  my_crawler_help_v2.py  prompttemplete.py  test_api.py  test_api_v2.py  thought_test.py
search/: qdrant_search_api.py
viewers/search_demo/: app.py
(+19 files in other folders)
