[project]
name = "my-crawler-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.8.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-model-profiles>=0.0.5",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "langgraph-api>=0.7.67",
    "langgraph-cli>=0.4.14",
    "langsmith>=0.7.14",
    "markdown>=3.10.2",
    "mcp>=1.26.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "qdrant-client>=1.17.1",
    "scipy>=1.17.1",
]
